SDKs/twilio.com/twilio_insights_v1/1.37.4/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            FetchAccountSettingsRequest req = new FetchAccountSettingsRequest() {{
                security = new FetchAccountSettingsSecurity() {{
                    accountSidAuthToken = new SchemeAccountSidAuthToken() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }};
                queryParams = new FetchAccountSettingsQueryParams() {{
                    subaccountSid = "laboriosam";
                }};
            }};

            FetchAccountSettingsResponse res = sdk.fetchAccountSettings(req);

            if (res.insightsV1AccountSettings.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `fetchAccountSettings`
* `fetchAnnotation` - Fetch a specific Annotation.
* `fetchCall`
* `fetchConference` - Fetch a specific Conference.
* `fetchConferenceParticipant` - Fetch a specific Conference Participant Summary.
* `fetchSummary`
* `fetchVideoParticipantSummary` - Get Video Log Analyzer data for a Room Participant.
* `fetchVideoRoomSummary` - Get Video Log Analyzer data for a Room.
* `listCallSummaries`
* `listConference` - Retrieve a list of Conferences.
* `listConferenceParticipant` - List Conference Participants.
* `listEvent`
* `listMetric`
* `listVideoParticipantSummary` - Get a list of room participants.
* `listVideoRoomSummary` - Get a list of Programmable Video Rooms.
* `updateAccountSettings`
* `updateAnnotation` - Create/Update the annotation for the call

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
